--- a/TP4.ipynb
+++ b/TP4.ipynb
@@ -97,7 +97,7 @@
    "source": [
     "### 1.1 \n",
     "Vous devez en premier lieu créer une fonction simple qui retourne une base de données de la région voulue, soit celle donnée en paramètre à la fonction CreateSubsetPerRegion(). Un exemple de ce qui doit être retourné est présenté ci-dessous:\n",
-    "![](https://github.com/INF1007-Gabarits/2021A_TP4/blob/master/Capture1.PNG)"
+    "![](Capture1.PNG)"
    ]
   },
   {
