--- a/TP4.ipynb
+++ b/TP4.ipynb
@@ -149,7 +149,7 @@
    "metadata": {},
    "source": [
     "## Question 2\n",
-    "Nous allons maintenant rajouter les données de 2016 afin de les comparer à celles de 2020. Tout d'abord, utilisez ImportNewData() pour importer cette nouvelle base de données nommée 2016.csv. Avec les pays ayant obtenu les scores maximaux de 'Happiness score' par région, tracez par la suite leur évolution entre 2016 à 2020. L'évolution doit être représentée de la plus petite différence à la plus grande. Voici un exemple de graphique à barre voulu à réaliser avec la fonction PlotComparison(), ce ne sont pas nécessairement les pays voulus. Vous pouvez vous renseigner sur la fonction [plt.bar](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.bar.html) de matplotlib.\n",
+    "Nous allons maintenant rajouter les données de 2016 afin de les comparer à celles de 2020. Tout d'abord, utilisez ImportNewData() pour importer cette nouvelle base de données nommée 2016.csv. Avec les pays ayant obtenu les scores maximaux de 'Happiness score' par région, le but est de tracer leur évolution entre 2016 à 2020. L'évolution doit être représentée de la plus petite différence à la plus grande. Pour ce faire, vous allez en premier lieu trouver les différences avec la fonction FindDifferences() qui retourne un dictionnaire en ordre croissant de ces différences. Par la suite, vous tracerez ces différences par pays. Voici un exemple de graphique à barre voulu à réaliser avec la fonction PlotComparison(), ce ne sont pas nécessairement les pays voulus. Vous pouvez vous renseigner sur la fonction [plt.bar](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.bar.html) de matplotlib.\n",
     "![](Capture2.PNG)"
    ]
   },
@@ -176,14 +176,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def PlotComparison(df_1,df_2):\n",
+    "def FindDifferences(df_1,df_2):\n",
     "    #TODO Reprendre les valeurs obtenues précédemment du pays avec le score maximal par région\n",
+    "    #TODO Retourner un dictionnaire des différences en ordre croissant\n",
+    "   \n",
+    "    return sorted_dict\n",
+    "def PlotComparison(sorted_dict):\n",
     "    #TODO Faire un bar plot de ces différences\n",
-    "    #TODO Arranger ces différences en ordre croissant\n",
+    "    \n",
     "    \n",
     "    plt.show()\n",
     "    \n",
-    "PlotComparison(df, df_2016)\n"
+    "sorted_dict = FindDifferences(df, df_2016)\n",
+    "PlotComparison(sorted_dict)\n"
    ]
   },
   {
