Nouvel énoncé readme

--- a/TP4.ipynb
+++ b/TP4.ipynb
@@ -204,7 +204,7 @@
     "![](Capture3.PNG)\n",
     "\n",
     "\n",
-    "En cas de région et de pays qui ne correspondent pas, vous devez afficher:\n",
+    "En cas de région et de pays qui ne correspondent pas, vous devez retourner:\n",
     "![](Capture4.PNG)"
    ]
   },
@@ -218,7 +218,10 @@
     "    #TODO  Vérifier si le pays fait partie de la région donnée sinon afficher le message indiqué plus haut\n",
     "        \n",
     "    #TODO Utiliser sns.displot et df.boxplot pour visualiser les deux paramètres demandés\n",
-    "        \n",
+    "\n",
+    "    #TODO Si région et pays ne correspondent pas retourner le message indiqué ci-haut\n",
+    "    else:\n",
+    "        return ''\n",
     "\n",
     "PlotDistributions(df_2016, df, 'North America and ANZ', 'Canada')\n",
     "PlotDistributions(df_2016, df, 'Western Europe', 'Taiwan')"
