Ajout des tests

--- a/TP4.ipynb
+++ b/TP4.ipynb
@@ -272,6 +272,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Tests à rouler\n",
+    "La cellule ci-dessous vous permet de tester certaines questions lorsqu'il s'agissait de retourner un print ou bien des dictionnaires en valeurs de retour. Les affichage de graphiques ainsi que les Dataframes retournés ne seront pas testés."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import unittest\n",
+    "import os\n",
+    "import sys\n",
+    "class TestQ1(unittest.TestCase):\n",
+    "    result = {'Finland': 7.808700085, 'New Zealand': 7.2996001239999995, 'Israel': 7.128600121, 'Costa Rica': 7.121399879, 'Czech Republic': 6.9109001160000005, 'Taiwan': 6.45539999, 'Singapore': 6.377099991000001, 'Uzbekistan': 6.257599831, 'Mauritius': 6.101299762999999, 'Pakistan': 5.69329977}\n",
+    "\n",
+    "    def test1_real_value(self):\n",
+    "        self.assertDictEqual(ClassMaxScorePerRegion(df), self.result)\n",
+    "\n",
+    "\n",
+    "class TestQ2(unittest.TestCase):\n",
+    "    def test2_find_differences(self):\n",
+    "        sorted_val = {'Singapore': -0.3619000089999993, 'Israel': -0.1383998790000005, 'New Zealand': -0.03439987600000016, 'Costa Rica': 0.03439987899999952, 'Taiwan': 0.07639999000000053, 'Uzbekistan': 0.2705998310000002, 'Czech Republic': 0.31490011600000045, 'Finland': 0.39570008500000053, 'Mauritius': 0.4532997629999995, 'Pakistan': 0.5612997699999998}\n",
+    "        self.assertDictEqual(FindDifferences(df, df_2016), sorted_val)\n",
+    "\n",
+    "\n",
+    "class Q3(unittest.TestCase):\n",
+    "    \n",
+    "\n",
+    "    def test3_plot_distributions(self):\n",
+    "        wanted = 'Le pays donné soit Taiwan ne correspond pas à la région Western Europe'\n",
+    "        self.assertEqual(PlotDistributions(df_2016, df, 'Western Europe', 'Taiwan'), wanted)\n",
+    "\n",
+    "\n",
+    "class Q4(unittest.TestCase):\n",
+    "     def test41_find_correlations(self):\n",
+    "        wanted = 'Le paramètre avec un coefficient de corrélation le plus élévé avec Happiness score est Logged GDP per capita avec 0.78'\n",
+    "        self.assertEqual(affichage, wanted)\n",
+    "        \n",
+    "res = unittest.main(argv=[''], verbosity=3, exit=False)\n",
+    "# if we want our notebook to stop processing due to failures, we need a cell itself to fail\n",
+    "assert len(res.result.failures) == 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Suite...\n",
     "Rendez-vous à la partie 3 que vous pouvez retrouver dans le fichier tests.py du github et dont les instructions sont dans le readme."
    ]
