--- a/TP4.ipynb
+++ b/TP4.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,8 @@
     "    \n",
     "    return \n",
     "\n",
-    "display(CreateSubsetPerRegion(df,'South Asia'))"
+    "display(CreateSubsetPerRegion(df,'East Asia'))\n",
+    "display(CreateSubsetPerRegion(df,'Central and Eastern Europe'))"
    ]
   },
   {
@@ -265,7 +266,8 @@
     "    \n",
     "chosen_max_cor, param = FindCorrelations(df)\n",
     "#TODO Afficher la phrase indiquant le coefficient de corrélation le plus élevé avec le paramètre 'Happiness score'\n",
-    "print(...)"
+    "affichage = ''\n",
+    "print(affichage)"
    ]
   },
   {
@@ -326,9 +328,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "a5a8b7b385b5b181da8eb7d2617e464e29854fed2f2d9b983bdbc932c2cbfc7f"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.7.4 64-bit ('base': conda)",
    "name": "python3"
   },
   "language_info": {
