--- a/TP4.ipynb
+++ b/TP4.ipynb
@@ -300,7 +300,7 @@
     "        self.assertDictEqual(FindDifferences(df, df_2016), sorted_val)\n",
     "\n",
     "\n",
-    "class Q3(unittest.TestCase):\n",
+    "class TestQ3(unittest.TestCase):\n",
     "    \n",
     "\n",
     "    def test3_plot_distributions(self):\n",
@@ -308,7 +308,7 @@
     "        self.assertEqual(PlotDistributions(df_2016, df, 'Western Europe', 'Taiwan'), wanted)\n",
     "\n",
     "\n",
-    "class Q4(unittest.TestCase):\n",
+    "class TestQ4(unittest.TestCase):\n",
     "     def test41_find_correlations(self):\n",
     "        wanted = 'Le paramètre avec un coefficient de corrélation le plus élévé avec Happiness score est Logged GDP per capita avec 0.78'\n",
     "        self.assertEqual(affichage, wanted)\n",
