--- a/TP4.ipynb
+++ b/TP4.ipynb
@@ -155,6 +155,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.1\n",
+    "Importation des données de l'année 2016"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -169,6 +177,14 @@
     "    return df_2016\n",
     "    \n",
     "df_2016 = ImportNewData()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2\n",
+    "Implémentation des fonctions pour illustrer les différences pour les 10 pays concernés entre 2016 et 2020"
    ]
   },
   {
